# CHIP8

./: .clang-format  CMakeLists.txt  LICENSE  Makefile  README.md  audio.cpp  audio.h  chip8.cpp  chip8.h  compile.sh  config.txt  graphics.cpp  graphics.h  input.cpp  input.h  keyboard_mapping.drawio  main.cpp
.github/workflows/: c-cpp.yml  cmake.yml
cmake/: CodeCoverage.cmake
include/: audio.h  chip8.h  graphics.h  input.h
scripts/: check-format.sh
src/: audio.cpp  chip8.cpp  graphics.cpp  graphics.h  input.cpp  main.cpp
tests/: CMakeLists.txt  audio_test.cpp  chip8_test.cpp  graphics_test.cpp  input_test.cpp  opcode_test.cpp
